# pacxx-runtime

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  buildspec.yml  pacxx
benchmarks/gauss/: gauss.cpp
benchmarks/matrixMult/: Native.cpp  OMP.cpp  OpenCL.cpp  kernel.ll  loop  moduleAfterPass  moduleBeforePass  opencl  opencl_device  spir.ll
benchmarks/nbody/: nbody.cpp
benchmarks/vectorAdd/: OpenCL.cpp  compile  compileManual  kernel.cl  nvvm.ll  opencl  opt2.ll
cmake/config/: FindPACXXConfig.cmake.in
cmake/pacxx/: FindPACXX.cmake  FindPAPI.cmake
config/: config.h.in
evaluation/opencl/: Makefile  dot.cpp  mandel.cpp  matMul.cpp  vectorAdd.cpp
evaluation/pacxx/: Makefile  cleanup  dot.cpp  kernel.ll  mandel.cpp  mandelbrot.ppm  matMul.cpp  moduleAfterPass.ll  moduleBeforePass.ll  opt1.ll  opt2.ll  reflect.ll  scalar.ll  vectorAdd.cpp  vectorized.mod.ll
experimental_stl/: _static_const.h  algorithm.h  execution_policy.h  iterator.h  numeric.h  tuple.h  type_traits.h  views.h
include/: Callback.h  CodePolicy.h  Executor.h  ModuleLoader.h  PACXX.h  Promise.h
include/detail/: CUDAErrorDetection.h  CUDARuntime.h  Common.h  CoreInitializer.h  DeviceBuffer.h  IRCompiler.h  IRRuntime.h  Kernel.h  KernelArgument.h  KernelConfiguration.h  Log.h  MemoryManager.h  PTXBackend.h
include/detail/common/: Common.h  Exceptions.h  LLVMHelper.h  Log.h  Meta.h  Timing.h
include/detail/cuda/: CUDADeviceBuffer.h  CUDAErrorDetection.h  CUDAKernel.h  CUDARuntime.h  CUDAUtility.h  PTXBackend.h
include/detail/device/: DeviceCode.h  DeviceFunctionDecls.h  DeviceTypes.h
include/detail/msp/: MSPEngine.h
include/detail/native/: NativeBackend.h  NativeDeviceBuffer.h  NativeKernel.h  NativeRuntime.h  ThreadPool.h
include/detail/native/SPMD/: AnalysisInfo.h  SPMDInfo.h  SPMDVectorizer.h
include/detail/stl_extension/: Allocators.h.h
include/pacxx/: CodePolicy.h  Executor.h  LinkAllPasses.h  ModuleLoader.h  PACXX.h  Promise.h  config.h
include/pacxx/detail/: CoreInitializer.h  DeviceBuffer.h  Event.h  IRProfiler.h  IRRuntime.h  Kernel.h  KernelArgument.h  KernelConfiguration.h  MemoryManager.h  ModuleIntegration.h  ModuleIntegration.inc  Profiler.h  Runtime.h
include/pacxx/detail/codegen/: Kernel.h  Reflection.h  Types.h
include/pacxx/detail/common/: Common.h  Exceptions.h  ExecutorHelper.h  LLVMHelper.h  Log.h  Meta.h  TearDown.h  Timing.h  jsonHelper.h
include/pacxx/detail/cuda/: CUDADeviceBuffer.h  CUDAErrorDetection.h  CUDAEvent.h  CUDAKernel.h  CUDARuntime.h  CUDAUtility.h  CUPTIProfiler.h  PTXBackend.h
include/pacxx/detail/device/: DeviceCode.h  DeviceFunctionDecls.h  DevicePrintf.h  DeviceTypes.h
include/pacxx/detail/msp/: MSPEngine.h
include/pacxx/detail/native/: NativeBackend.h  (+5 more)
lib/: Common.cpp  CoreInitializer.cpp  DeviceCode.cpp  Executor.cpp  IRProfiler.cpp  IRRuntime.cpp  Kernel.cpp  KernelConfiguration.cpp  Log.cpp  MSPEngine.cpp  ModuleLoader.cpp  Profiler.cpp  Runtime.cpp
lib/bitcode/: amdgcn_device_binding.cpp  amdgcn_libdevice.bc  native_device_binding.cpp  nvptx_device_binding.cpp  syscalls.ll
lib/common/: Common.cpp  Log.cpp  TearDown.cpp  WrappedMain.cpp
lib/common/transforms/: AddressSpaceTransform.cpp  CodeGenPrepare.cpp  IntrinsicMapper.cpp  IntrinsicScheduler.cpp  KernelEraser.cpp  LoadMotion.cpp  MSPCleanup.cpp  MSPGeneration.cpp  MSPRemover.cpp  MemoryCoalescing.cpp  ModuleHelper.cpp  TargetSelection.cpp  nvvm_reg.cpp  pacxx_intrinsic_mapper.cpp  pacxx_intrinsic_scheduler.cpp  pacxx_reflection.cpp  pacxx_reflection_cleaner.cpp  pacxx_reflection_remover.cpp  pacxx_target_select.cpp
lib/cuda/: CUDADeviceBuffer.cpp  CUDAErrorDetection.cpp  CUDAEvent.cpp  CUDAKernel.cpp  CUDARuntime.cpp  CUPTIProfiler.cpp  PTXBackend.cpp
lib/cuda/transforms/: AddressSpaceTransform.cpp  NVPTXPrepair.cpp  nvvm.cpp  spir.cpp
lib/native/: NativeBackend.cpp  NativeDeviceBuffer.cpp  NativeEvent.cpp  NativeKernel.cpp  NativeRuntime.cpp  PAPIProfiler.cpp
lib/native/transforms/: BarrierGeneration.cpp  KernelLinker.cpp  LivenessAnalysis.cpp  LivenessAnalysis.h  MaskedMemTransform.cpp  SMGeneration.cpp  SMGeneration.h  SPMDVectorizer.cpp  pacxx_intrinsic_scheduler.cpp  pacxx_liveness_analysis.cpp  pacxx_liveness_analysis.h  pacxx_native_barrier.cpp  pacxx_native_linker.cpp  pacxx_select_emitter.cpp  pacxx_sm_pass.cpp  pacxx_sm_pass.h
lib/remote/: RemoteDeviceBuffer.cpp  RemoteEvent.cpp  RemoteKernel.cpp  RemoteRuntime.cpp
lib/rocm/: HIPDeviceBuffer.cpp  HIPErrorDetection.cpp  HIPEvent.cpp  HIPKernel.cpp  HIPRuntime.cpp  HSACOBackend.cpp
lib/rocm/transforms/: AMDGCNPrepair.cpp
matrixMult/: OpenCL.cpp  kernel.cl  matMulOpenCL  nvvm.ll  opencl  opt1.ll  reflect.ll
spmdTest/: 1  compile  dump  host  kernel.ll  matMul.cpp  moduleAfterPass  moduleBeforePass  nvvm.ll  opt2.ll  reflect.ll  seq  simple.cpp  spir.ll  vectorAdd.cpp
spmdTest/tmp-161201-1626-3EDulN/: DeviceCode.bc  cira.bc  embed_llvm.S  nvvm.bc  nvvm_device_binding.bc  pacxx.bc  spir.bc  syscalls.bc
src/: CUDADeviceBuffer.cpp  CUDAErrorDetection.cpp  CUDAKernel.cpp  CUDARuntime.cpp  Common.cpp  CoreInitializer.cpp  DeviceCode.cpp  Executor.cpp  IRRuntime.cpp  Kernel.cpp  KernelConfiguration.cpp  Log.cpp  MSPEngine.cpp  ModuleLoader.cpp  NativeBackend.cpp  NativeRuntime.cpp  PTXBackend.cpp  embed_native_binding.S  embed_nvptx_binding.S
src/asm/: embed.S
src/asm/embed_executable/: embed_llvm.S  embed_reflection.S
src/asm/embed_runtime/: embed_native_binding.S  embed_nvptx_binding.S
src/bitcode/: native_device_binding.cpp  nvvm_device_binding.cpp  syscalls.ll
src/cuda/: CUDADeviceBuffer.cpp  CUDAErrorDetection.cpp  CUDAKernel.cpp  CUDARuntime.cpp  PTXBackend.cpp
src/native/: NativeBackend.cpp  NativeDeviceBuffer.cpp  NativeEvent.cpp  NativeKernel.cpp  NativeRuntime.cpp  ThreadPool.cpp
src/native/SPMD/: SPMDVectorizer.cpp
test/: Test.cpp  Vector.cpp  compile  kernel.ll  nvvm.ll  opt2.ll  reflect.ll  spir.ll
tools/driver/: driver.py  pacxx_driver.py
vectorAdd/: Manual.cpp  Native.cpp  compileOpenCL  kernel.ll  manual  moduleAfterPass  moduleBeforePass  reflect.ll  spir.ll
(+18 files in other folders)
